# irevshell

./: README.md  pyproject.toml
irevshell/: __main__.py  console.py
irevshell/src/: tcp_pty_shell_handler.py
